force-app/main/default/objects/ReturnOrder/fields/HRCSVC_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Bill_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Return Orders</relationshipLabel>
    <relationshipName>Return_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>