force-app/main/default/objects/ReturnOrder/fields/HRCSVC_Field_Action_Mod__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Field_Action_Mod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Action/Mod</label>
    <referenceTo>HRCFSL_ModList__c</referenceTo>
    <relationshipLabel>Return Orders</relationshipLabel>
    <relationshipName>Return_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>