force-app/main/default/objects/ReturnOrder/fields/HRCSVC_Field_Action_Mod_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Field_Action_Mod_Description__c</fullName>
    <formula>HRCSVC_Field_Action_Mod__r.HRCSVC_Description__c</formula>
    <label>Field Action/Mod Description</label>
    <type>Text</type>
</CustomField>