force-app/main/default/objects/ReturnOrder/fields/HRCSVC_Incomplete_CQ__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Incomplete_CQ__c</fullName>
    <label>Incomplete Complaint Qualifications</label>
    <summaryFilterItems>
        <field>ReturnOrderLineItem.HRCSVC_Complaint_Qualification_Completed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>ReturnOrderLineItem.ReturnOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>