force-app/main/default/objects/ReturnOrder/fields/HRCSVC_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Return Orders</relationshipLabel>
    <relationshipName>Return_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>