force-app/main/default/objects/ReturnOrder/fields/HRCSVC_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <length>25</length>
    <type>Text</type>
</CustomField>