force-app/main/default/objects/ReturnOrder/fields/HRCSVC_Ship_To__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Return Orders (Ship To)</relationshipLabel>
    <relationshipName>Return_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>