force-app/main/default/objects/ReturnOrder/fields/HRCSVC_Unreceived_Lines__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Unreceived_Lines__c</fullName>
    <label>Unreceived Lines</label>
    <summaryFilterItems>
        <field>ReturnOrderLineItem.QuantityReceived</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>ReturnOrderLineItem.ReturnOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>