force-app/main/default/objects/ReturnOrder/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <formula>IMAGE(&quot;https://hill-rom--hrctest.lightning.force.com/sfc/servlet.shepherd/version/download/0680200000060PVAAY&quot;, &quot;Hillrom Logo&quot;,60,200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo</label>
    <type>Text</type>
</CustomField>